Bug 1835562 - Fix synthesized baseline from border-box when line is inverted. r=dholbert

`Baseline::SynthesizeBOffsetFromMarginBox()` and
`Baseline::SynthesizeBOffsetFromContentBox()` already handle the writing mode
with inverted lines (i.e. writing-mode: vertical-lr).

Differential Revision: https://phabricator.services.mozilla.com/D184879